--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.ProjProb"
         tools:targetApi="31">
         <activity
+            android:name=".LoseDialog"
+            android:exported="false" />
+        <activity
+            android:name=".WinDialog"
+            android:exported="false" />
+        <activity
             android:name=".CustomDialog"
             android:exported="false" />
         <activity
